WebHelpers ChangeLog
====================

tip (development version)
-------------------------

* webhelpers.containers / webhelpers.misc:

  - ``NotGiven`` moved to webhelpers.misc.

* webhelpers.html.grid / webhelpers.pylonslib.grid:

  - Updates by Ergo, including SQLAlchemy grid classes, and styling.

* webhelpers.misc:

  - New function ``deprecate``.

* webhelpers.number:

  - New functions ``format_data_size``, ``format_byte_size``, and
    ``format_bit_size`` for displaying numbers in SI units
    ("1.2 kilobytes", "1.2 kB", "1.0 KiB"). Contributed by
    Wojciech Malinowski.

1.0b5 (2010-03-18)
------------------

* webhelpers.html.converters:

  - Re-add import of ``render`` and ``sanitize`` from
    ``webhelpers.html.render``.  That module is not public.

* webhelpers.misc:

  - New exception ``OverwriteError``.
  - Add ``exclude`` argument to ``subclasses_only``.

* webhelpers.text:

  - Disable ``convert_misc_characters``: it fails its doctests and there's
    no consensus on what it should do.

* "number_to_human_size.py" is in unfinished directory. This is an old rails
  helper from WebHelpers 0.6.4. It's here pending a more comprehensive helper;
  see http://bitbucket.org/bbangert/webhelpers/issue/2/reinstate-number_to_human_size

1.0b4 (2010-01-24)
------------------

* Delete ``webhelpers.string24``.  WebHelpers no longer supports Python 2.3.

* webhelpers.feedgenerator:

  - Add a basic ``Geometry`` class for the Geo helpers.

* webhelpers.html.grid_demo:

  - Demonstrates ``webhelpers.html.grid``. Run as 
    "python -m webhelpers.html.grid_demo OUTPUT_DIRECTORY".

* webhelpers.html.converters:

  - Don't import ``render`` and ``sanitize`` to converters module.
    (Reversed in 1.0b5.)

* webhelpers.html.secure_form:

  - Move module to ``webhelpers.pylonslib.secure_form`` because it depends
    on ``pylons.session``.

* webhelpers.misc:

  - New helper ``flatten`` to interpolate embedded lists and tuples.